--- a/utilities.css
+++ b/utilities.css
@@ -46,7 +46,16 @@
     width: 600px;
     position: static;
   }
-  body h1{
+  header {
+    width: 600px;
+  }
+  main {
+    width: 600px;
+  }
+  footer {
+    width: 600px;
+  }
+   h1{
     font-size:5rem;
   }
   }
